[ORG-48] added department to user
