# swagger/user.swagger.json
@@ -273,7 +273,19 @@
             "required": false,
             "type": "array",
             "items": {
-              "type": "string"
+              "type": "string",
+              "format": "int64"
+            },
+            "collectionFormat": "multi"
+          },
+          {
+            "name": "departments",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "int64"
             },
             "collectionFormat": "multi"
           }
@@ -388,7 +400,12 @@
           "type": "boolean"
         },
         "team": {
-          "type": "string"
+          "type": "string",
+          "format": "int64"
+        },
+        "department": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
